# BankVision

./: .gitignore  CMakeLists.txt  README.md  RELEASE_GUIDE.md  main.cpp
BankVision/: CMakeListe.txt  main.cpp
BankVision/controllers/: AuthController.cpp  AuthController.h  CompteController.cpp  CompteController.h  StatController.cpp  StatController.h
BankVision/data/: DataManager.cpp  DataManager.h
BankVision/models/: Banque.cpp  Banque.h  Client.cpp  Client.h  CompteBancaire.cpp  CompteBancaire.h  Pret.cpp  Pret.h  Transaction.cpp  Transaction.h
BankVision/resources/: resources.qrc
BankVision/resources/styles/: style.css
BankVision/views/: FenetreConnexion.cpp  FenetreConnexion.h  FenetreOperations.cpp  FenetreOperations.h  FenetreStatistiques.cpp  FenetreStatistiques.h  FenetreTableauBord.cpp  FenetreTableauBord.h
BankVision/views/widgets/: CamembertDepenses.cpp  CamembertDepenses.h  (+4 more)
controllers/: AuthController.cpp  AuthController.h  CompteController.cpp  CompteController.h  StatController.cpp  StatController.h
data/: DataManager.cpp  DataManager.h
models/: Banque.cpp  Banque.h  Client.cpp  Client.h  CompteBancaire.cpp  CompteBancaire.h  Pret.cpp  Pret.h  Transaction.h
resources/: resources.qrc
resources/styles/: style.qss
views/: FenetreConnexion.cpp  FenetreConnexion.h  FenetreOperations.cpp  FenetreOperations.h  FenetreStatistiques.cpp  FenetreStatistiques.h  FenetreTableauBord.cpp  FenetreTableauBord.h
views/widgets/: CamembertDepenses.cpp  CamembertDepenses.h  GraphiqueSolde.cpp  GraphiqueSolde.h  IndicateurSolde.cpp  IndicateurSolde.h
